--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.14.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.10"
   }
 }
